--- a/custom-addons/customer_route_management/views/route_line_views.xml
+++ b/custom-addons/customer_route_management/views/route_line_views.xml
@@ -8,14 +8,14 @@
             <form string="Delivery Route">
                 <sheet>
                     <group>
-                        <field name="route"/>
+                        <field name="route" readonly="1"/>
                         <field name="company_id" invisible="1"/>
                         <field name="delivery_route_link_id" invisible="1"/>
                         <field name="cust_tree_ids"
                                invisible="delivery_route_link_id == False">
-                            <tree delete="false" create="True"><!--We add create=true and delete false-->
+                            <tree delete="false" create="True" default_order="sequence asc"><!--We add create=true and delete false-->
                                 <field name="sequence" widget="handle"/>
-                                <field name="name"/>
+                                <field name="name" />
                             </tree>
                         </field>
                     </group>
@@ -23,4 +23,6 @@
             </form>
         </field>
     </record>
+
+    
 </odoo>
