--- a/custom-addons/customer_route_management/views/route_line_views.xml
+++ b/custom-addons/customer_route_management/views/route_line_views.xml
@@ -13,7 +13,7 @@
                         <field name="delivery_route_link_id" invisible="1"/>
                         <field name="cust_tree_ids"
                                invisible="delivery_route_link_id == False">
-                            <tree delete="false" create="True" default_order="sequence asc"><!--We add create=true and delete false-->
+                            <tree delete="false" create="True" default_order="id desc" ><!--We add create=true and delete false-->
                                 <field name="sequence" widget="handle"/>
                                 <field name="name" />
                             </tree>
