--- a/custom-addons/ksa_zatca_integration/reports/report.xml
+++ b/custom-addons/ksa_zatca_integration/reports/report.xml
@@ -14,6 +14,20 @@
         <field name="dpi">90</field>
     </record>
 
+    <record id="paperformat_low_simplified" model="report.paperformat">
+        <field name="name">Othaim A4 low margin</field>
+        <field name="default" eval="True"/>
+        <field name="format">A4</field>
+        <field name="orientation">Portrait</field>
+        <field name="margin_top">10</field>
+        <field name="margin_bottom">10</field>
+        <field name="margin_left">0</field>
+        <field name="margin_right">0</field>
+        <field name="header_line" eval="False"/>
+        <field name="header_spacing">2</field>
+        <field name="dpi">90</field>
+    </record>
+
     <record id="paperformat_standard" model="report.paperformat">
         <field name="name">B2B Paper Format</field>
         <field name="default" eval="True"/>
@@ -107,5 +121,17 @@
     </record>
 
 
+
+  
+
+    <record id="action_report_standard_low_margin_tax_invoice" model="ir.actions.report">
+        <field name="name">Recipt VAT Invoice Report</field>
+        <field name="model">account.move</field>
+        <field name="report_type">qweb-pdf</field>
+        <field name="report_name">ksa_zatca_integration.report_tax_low_margin_invoice</field>
+        <field name="report_file">ksa_zatca_integration.report_tax_low_margin_invoice</field>
+        <field name="print_report_name">(object._get_report_base_filename())</field>
+        <field name="paperformat_id" ref="ksa_zatca_integration.paperformat_low_simplified"/>
+    </record>
 
 </odoo>
