--- a/custom-addons/ksa_zatca_integration/reports/simpli_vat_invoice_report.xml
+++ b/custom-addons/ksa_zatca_integration/reports/simpli_vat_invoice_report.xml
@@ -247,7 +247,11 @@
 							</tr>
 						</thead>
 					</table>
-				
+					<div class="col-3" style="margin-top:5pt; padding-left:25pt;">
+						<img t-if="o.pos_reference"  t-attf-src="/report/barcode/Code128/{{o.pos_reference.split(' ')[1]}}"
+						style="width:250px;height:50px;display:block;margin:auto;"
+						alt="Barcode" />
+					</div>
 
 					</div>
 				</div>
